apps/base/changes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: changes
  labels:
    http-ingress: "true"
